--- a/surah.html
+++ b/surah.html
@@ -19,7 +19,7 @@
 
 			<div class="bismillah" id="bismillah">
 				<!-- <input type="text" placeholder="Search for a surah by title"/> -->
-				<img  src="src/img/bismillah.svg" alt="">
+				<img  src="./src/img/bismillah.svg" alt="">
 			</div>
 
       <div class="ayah-list" id="ayah-list">
