--- a/surah.html
+++ b/surah.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="main">
 			<div class="heading">
-				<h1><a href="/">The Noble Quran</a></h1>
+				<h1><a href="./index.html">The Noble Quran</a></h1>
 				<h4 id="surah-title">Last 10 surah</h4>
 			</div>
 
