--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="./src/css/style.css" />
 		<title>Quran last 10 surah</title>
 	</head>
@@ -22,12 +22,21 @@
 			</div>
 
 			<div class="surah-list" id="surah-list">
-				<!-- <div class="surah"><a href="/surah.html">Surah 1</a></div>
-				<div class="surah"><a href="/surah.html">Surah 1</a></div>
-				<div class="surah"><a href="/surah.html">Surah 1</a></div>
-				<div class="surah"><a href="/surah.html">Surah 1</a></div>
-				<div class="surah"><a href="/surah.html">Surah 1</a></div>
-				<div class="surah"><a href="/surah.html">Surah 1</a></div> -->
+				<!-- <a class="surah" href="/surah.html">
+					<div class="number-box">
+						<div class="number">
+							1
+						</div>
+					</div>
+					<div class="left">
+						<span>Al-Fatiha</span>
+						<small>The Opener</small>
+					</div>
+					<div class="right">
+						<span>1:1</span>
+						<small>7 ayahs</small>
+					</div>
+				</a> -->
 			</div>
 		</div>
 		<script src="./src/scripts/index.js"></script>
