style single surah page

--- a/surah.html
+++ b/surah.html
@@ -23,6 +23,21 @@
 			</div>
 
       <div class="ayah-list" id="ayah-list">
+        <!-- <div class="ayah-item">
+          <div class="controls">
+            <span>
+							<img src="src/img/icons/play.svg" alt="">
+						</span>
+            <span>
+							<img src="src/img/icons/share.svg" alt="">
+						</span>
+          </div>
+          <div class="ayah-text">
+            <div class="arabic">Lorem ipsum dolor sit amet <span class="ayah-number">1</span> </div>
+            <div class="translation">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+          </div>
+        </div> -->
+
         <!-- 
 				<div class="ayah-item">
 					<div class="controls">
