--- a/surah.html
+++ b/surah.html
@@ -16,6 +16,9 @@
 				<h1><a href="./index.html">The Noble Quran</a></h1>
 				<h4 id="surah-title">Last 10 surah</h4>
 			</div>
+			<audio controls>
+				<source src="./src/data/surah-audio/Al-Faatiha.mp3" type="audio/mpeg">
+			</audio>
 
 			<div class="bismillah" id="bismillah">
 				<!-- <input type="text" placeholder="Search for a surah by title"/> -->
@@ -37,38 +40,6 @@
             <div class="translation">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
           </div>
         </div> -->
-
-        <!-- 
-				<div class="ayah-item">
-					<div class="controls">
-						<span>Bookmark</span>
-						<span>Share</span>
-					</div>
-					<div class="ayah-text">
-						<div class="arabic">This is the first verse</div>
-						<div class="translation">This is the first verse</div>
-					</div>
-				</div>
-        <div class="ayah-item">
-					<div class="controls">
-						<span>Bookmark</span>
-						<span>Share</span>
-					</div>
-					<div class="ayah-text">
-						<div class="arabic">This is the first verse</div>
-						<div class="translation">This is the first verse</div>
-					</div>
-				</div>
-        <div class="ayah-item">
-					<div class="controls">
-						<span>Bookmark</span>
-						<span>Share</span>
-					</div>
-					<div class="ayah-text">
-						<div class="arabic">This is the first verse</div>
-						<div class="translation">This is the first verse</div>
-					</div>
-				</div> -->
       </div>
 		</div>
 		<script src="./src/scripts/index.js"></script>
