--- a/index.html
+++ b/index.html
@@ -17,28 +17,15 @@
 				<h4>Last 10 surah</h4>
 			</div>
 
-			<div class="search-container">
-				<input type="text" placeholder="Search for a surah by title"/>
-			</div>
+
 
 			<div class="surah-list" id="surah-list">
-				<!-- <a class="surah" href="/surah.html">
-					<div class="number-box">
-						<div class="number">
-							1
-						</div>
-					</div>
-					<div class="left">
-						<span>Al-Fatiha</span>
-						<small>The Opener</small>
-					</div>
-					<div class="right">
-						<span>1:1</span>
-						<small>7 ayahs</small>
-					</div>
-				</a> -->
 			</div>
 		</div>
+
+		<footer>
+			<p>&copy; 2022 - Tahmid & Nazmul (Tools and Technologies for Internet Programming)</p>
+		</footer>
 		<script src="./src/scripts/index.js"></script>
 	</body>
 </html>
