--- a/surah.html
+++ b/surah.html
@@ -21,27 +21,18 @@
 			</audio>
 
 			<div class="bismillah" id="bismillah">
-				<!-- <input type="text" placeholder="Search for a surah by title"/> -->
 				<img  src="./src/img/bismillah.svg" alt="">
 			</div>
 
       <div class="ayah-list" id="ayah-list">
-        <!-- <div class="ayah-item">
-          <div class="controls">
-            <span>
-							<img src="src/img/icons/play.svg" alt="">
-						</span>
-            <span>
-							<img src="src/img/icons/share.svg" alt="">
-						</span>
-          </div>
-          <div class="ayah-text">
-            <div class="arabic">Lorem ipsum dolor sit amet <span class="ayah-number">1</span> </div>
-            <div class="translation">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-          </div>
-        </div> -->
+
       </div>
 		</div>
+
+		<footer>
+			<p>&copy; 2022 - Tahmid & Nazmul (Tools and Technologies for Internet Programming)</p>
+		</footer>
+
 		<script src="./src/scripts/index.js"></script>
 	</body>
 </html>
