--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 		<title>Quran last 10 surah</title>
 	</head>
 	<body>
-		<div class="main">
+		<div class="about-container">
 		<h3 class="about-heading">Introduction</h3>
   
   <p  class="about-p" >
